Fixed jumpstart tab line in bottom

--- a/app/assets/stylesheets/layout/_main-content.scss
+++ b/app/assets/stylesheets/layout/_main-content.scss
@@ -20,4 +20,5 @@
   padding-top: rem(75);
   @extend %relative;
   @include background-image('filter-bg.png');
+  background-position: bottom;
 }
